--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
+server.port=9999
+
 # ===============================
 # = DATA SOURCE
 # ===============================
 # Set here configurations for the database connection
 spring.datasource.url=jdbc:mysql://localhost:3306/studiapp
-spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.username=andisuer
+spring.datasource.password=andisuser32!
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Keep the connection alive if idle for a long time (needed in production)
